--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.8.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-scripts": "2.1.1",
     "react-weathericons": "^1.0.4"
   },
